syntax = "proto3";
option go_package = "./;pb";

message Problem{
  int64 id = 1;
  string create_at = 2;
  string delete_at = 3;

  string title = 4;
  string description = 5;
  int32 level = 6;
  repeated string tags = 7;
  int64 create_by = 8;

  ProblemConfig config = 9;

  int32 status = 10;
}

message ProblemConfig{
  repeated TestCase test_cases = 1;
  Limit compile_limit = 2;
  Limit run_limit = 3;
  int32 level = 4;
}

message TestCase{
  string input = 1;
  string output = 2;
}
message Limit{
  int64 cpu_limit = 1;
  int64 clock_limit = 2;
  int64 memory_limit = 3;
  int64 stack_limit = 4;
  int64 proc_limit = 5;
}